[package]
name = "nyx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8"
tokio = { version = "1.52.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
