[package]
name = "nyx"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = "0.10.1"
clap = { version = "4.6.0", features = ["derive"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8"
tokio = { version = "1.52.0", features = ["full"] }
x25519-dalek = "2.0.1"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
