[package]
name = "nyx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nyx"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# P2P networking stack — "macros" enables #[derive(NetworkBehaviour)]
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "kad",
    "mdns",
    "identify",
    "macros",
] }

# Async stream utilities (required by libp2p swarm event loop)
futures = "0.3"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Interactive async terminal readline
rustyline-async = "0.4"

# Cryptography — key exchange
x25519-dalek = { version = "2", features = ["static_secrets"] }

# Cryptography — key derivation
hkdf = "0.12"
sha2 = "0.10"

# Cryptography — AEAD encryption
chacha20poly1305 = "0.10"

# Random number generation (used by x25519-dalek and nonce generation)
rand = "0.8"